--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escola de Robótica</title>
 </head>
 <body>
-    
+    <header>
+        <H1>ESCOLA DE ROBOTICA</H1>
+        <ul>    
+            <li>Professores</li>
+            <li>EQUIPE DE PROFESSORES</li>    
+        </ul>
+    </header>
+
 </body>
+<head>
 </html>
