--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Escola de Robótica</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header>
-        <H1>ESCOLA DE ROBOTICA</H1>
-        <ul>    
-            <li>Professores</li>
-            <li>EQUIPE DE PROFESSORES</li>    
+
+    <body>
+     <header>
+            <H1>ESCOLA DE ROBOTICA</H1>
+             <ul>    
+                 <li>Professores</li>
+                 <li>EQUIPE DE PROFESSORES</li>    
         </ul>
     </header>
 
