--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <Link>style.css</Link>
     <title>Escola de Robótica</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +13,7 @@
             <H1>ESCOLA DE ROBOTICA</H1>
              <ul>    
                  <li>Professores</li>
-                 <li>EQUIPE DE PROFESSORES</li>    
+                 <li>EQUI</li>    
         </ul>
     </header>
 
