--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <body>
      <header>
+        <img src="" alt="">
             <H1>ESCOLA DE ROBOTICA</H1>
              <ul>    
                  <li>Professores</li>
@@ -19,37 +20,3 @@
 </body>
 <head>
 </html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Welcome to My Website</h1>
-    </header>
-    <main>
-        <section>
-            <h2>About Me</h2>
-            <p>I am a web developer with a passion for creating beautiful and functional websites.</p>
-        </section>
-        <section>
-            <h2>My Skills</h2>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>PHP</li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2023 My Website</p>
-    </footer>
-</body>
-</html>
-
