--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
                  <li>Professores</li>
                  <li>EQUI</li>    
         </ul>
+         <div id="background-video">
+  <video autoplay loop muted>
+    <source src="your-video-file.mp4" type="video/mp4">
+  </video>
+</div>
     </header>
 
 </body>
