--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Escola de Robótica</title>
+   <title>COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO JERONIMO DA SERRA</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
     <body>
      <header>
         <img src="" alt="">
-            <H1>ESCOLA DE ROBOTICA</H1>
+            <H1>COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO JERONIMO DA SERRA</H1>
              <ul>    
-                 <li>Professores</li>
-                 <li>EQUI</li>    
+                 <li>HISTORICO</li>
+                 <li>EQUIPE PEDAGÓGICA</li>    
         </ul>
          <div id="background-video">
   <video autoplay loop muted>
@@ -25,3 +25,4 @@
 </body>
 <head>
 </html>
+<
