--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         <img src="" alt="">
             <H1>COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO JERONIMO DA SERRA</H1>
              <ul>    
-                 <li>HISTORICO</li>
-                 <a href=http://www.consultaescolas.pr.gov.br/consultaescolas-java/pages/templates/initial2.jsf;jsessionid=MfAqIj4D1cEQ3ZQRtmJ081aH3vy5fiIeoa7Itkih.sseed75003?windowId=121&codigoEstab=19&codigoMunicipio=2490>HISTORICO</a> 
-                 <li>EQUIPE PEDAGÓGICA</li>HISTÓRICO   
+                 <li<a href=http://www.consultaescolas.pr.gov.br/consultaescolas-java/pages/templates/initial2.jsf;jsessionid=MfAqIj4D1cEQ3ZQRtmJ081aH3vy5fiIeoa7Itkih.sseed75003?windowId=121&codigoEstab=19&codigoMunicipio=2490>HISTORICO</a> >HISTORICO</li>
+                 <li>EQUIPE PEDAGÓGICA</li>   
         </ul>
          <div id="background-video">
   <video autoplay loop muted>
