--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <img src="" alt="">
             <H1>COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO JERONIMO DA SERRA</H1>
              <ul>    
-                 <Li></Li><a href=http://www.consultaescolas.pr.gov.br/consultaescolas-java/pages/templates/initial2.jsf;jsessionid=MfAqIj4D1cEQ3ZQRtmJ081aH3vy5fiIeoa7Itkih.sseed75003?windowId=121&codigoEstab=19&codigoMunicipio=2490>HISTORICO</a><LI>
-                </li><a href=http://www.consultaescolas.pr.gov.br/consultaescolas-java/pages/templates/initial2.jsf;jsessionid=MfAqIj4D1cEQ3ZQRtmJ081aH3vy5fiIeoa7Itkih.sseed75003?windowId=121&codigoEstab=19&codigoMunicipio=2490> EQUIPE PEDAGÓGICA</a>
-        </ul>
-         <div id="background-video">
+                </Li><a href=http://www.consultaescolas.pr.gov.br/consultaescolas-java/pages/templates/initial2.jsf;jsessionid=MfAqIj4D1cEQ3ZQRtmJ081aH3vy5fiIeoa7Itkih.sseed75003?windowId=121&codigoEstab=19&codigoMunicipio=2490>HISTORICO</a><LI>
+                </li><a href=http://www.consultaescolas.pr.gov.br/consultaescolas-java/pages/templates/initial2.jsf;jsessionid=MfAqIj4D1cEQ3ZQRtmJ081aH3vy5fiIeoa7Itkih.sseed75003?windowId=121&codigoEstab=19&codigoMunicipio=2490> EQUIPE PEDAGÓGICA</a><Li></Li>
+            <ul>
+                 <div id="background-video">
   <video autoplay loop muted>
     <source src="your-video-file.mp4" type="video/mp4">
   </video>
