--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
    
             <H1>COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO JERONIMO DA SERRA</H1>  
          <ul>
-             <li><a href=http://www.consultaescolas.pr.gov.br/consultaescolas-java/pages/templates/initial2.jsf;jsessionid=MfAqIj4D1cEQ3ZQRtmJ081aH3vy5fiIeoa7Itkih.sseed75003?windowId=121&codigoEstab=19&codigoMunicipio=2490>HISTORICO</a>
-                 <a href=http://www.consultaescolas.pr.gov.br/consultaescolas-java/pages/templates/initial2.jsf;jsessionid=MfAqIj4D1cEQ3ZQRtmJ081aH3vy5fiIeoa7Itkih.sseed75003?windowId=121&codigoEstab=19&codigoMunicipio=2490> EQUIPE PEDAGÓGICA</a></Li>
+             <li><a href=http://www.consultaescolas.pr.gov.br/consultaescolas-java/pages/templates/initial2.jsf;jsessionid=MfAqIj4D1cEQ3ZQRtmJ081aH3vy5fiIeoa7Itkih.sseed75003?windowId=121&codigoEstab=19&codigoMunicipio=2490>HISTORICO</a><Li>
+                <Li><a href=http://www.consultaescolas.pr.gov.br/consultaescolas-java/pages/templates/initial2.jsf;jsessionid=MfAqIj4D1cEQ3ZQRtmJ081aH3vy5fiIeoa7Itkih.sseed75003?windowId=121&codigoEstab=19&codigoMunicipio=2490> EQUIPE PEDAGÓGICA</a></Li>
           </ul>
      </header>
 
