--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO JERONIMO DA SERRA</title>
+   <title>C.C.MILITAR JOAO XXIII - SÃO JERONIMO DA SERRA</title>
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
@@ -17,9 +17,9 @@
                 <li>
                     HISTORICO  
                 </li> 
-                     <li>
-                         EQUIPE PEDAGÓGICA
-                     </li>     
+                <li>
+                     EQUIPE PEDAGÓGICA
+                </li>     
             </ul>
      </header>
 
