--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <header>
         <img src=" " alt="">
    
-            <H1>C.C.MILITAR JOAO XXIII - SÃO JERONIMO DA SERRA</H1>  
+            <H1>C.C.MILITAR JOAO XXIII - SÃO J. DA SERRA</H1>  
              <ul>
         
                 
