--- a/index.html
+++ b/index.html
@@ -7,19 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
-     <header>
+     <header class="cabeçalho">
         <img src=" " alt="">
    
             <H1>C.C.MILITAR JOAO XXIII - SÃO J. DA SERRA</H1>  
              <ul>
         
                 
-                <li>
-                    HISTORICO  
-                </li> 
-                <li>
-                     EQUIPE PEDAGÓGICA
-                </li>     
+                <li>HISTORICO  </li> 
+                <li>EQUIPE PEDAGÓGICA</li>     
             </ul>
      </header>
 
