--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
      <header class="cabeçalho">
         <img src=" " alt="">
    
-            <H1>C.C.MILITAR JOAO XXIII - SÃO J. DA SERRA</H1>  
+            <H1class ="cabeçalho-1"></H1class> >C.C.MILITAR JOAO XXIII - SÃO J. DA SERRA</H1>  
              <ul>
         
                 
-                <li>HISTORICO  </li> 
-                <li>EQUIPE PEDAGÓGICA</li>     
+                <li class="cabeçalho-lista-1">HISTORICO  </li> 
+                <li class="cabeçalho-lista2">EQUIPE PEDAGÓGICA</li>     
             </ul>
      </header>
 
