--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <header class="cabeçalho">
         <img src=" " alt="">
    
-            <H1class ="cabeçalho-1"></H1class> >C.C.MILITAR JOAO XXIII - SÃO J. DA SERRA</H1>  
+            <H1class ="cabeçalho-1"></H1class> >COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO J. DA SERRA</H1>  
              <ul>
         
                 
