--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>C.C.MILITAR JOAO XXIII - SÃO JERONIMO DA SERRA</title>
     <link rel="stylesheet" href="style.css">
-</head>
+
     <body>
      <header class="cabeçalho">
-        <img src=" " alt="">
-   
-            <H1class ="cabeçalho-1"></H1class> >COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO J. DA SERRA</H1>  
+        <img src="educacao.png" alt="imagem 1">
+            <h1 class ="cabeçalho-1">COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO J. DA SERRA</h1>   
              <ul>
-        
-                
                 <li class="cabeçalho-lista-1">HISTORICO  </li> 
                 <li class="cabeçalho-lista2">EQUIPE PEDAGÓGICA</li>     
             </ul>
