--- a/index.html
+++ b/index.html
@@ -5,17 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>C.C.MILITAR JOAO XXIII - SÃO JERONIMO DA SERRA</title>
     <link rel="stylesheet" href="style.css">
-
-    <body>
-     <header class="cabeçalho">
+</head>
+<body>
+     <header class="cabeçalho" >
         <img src="educacao.png" alt="imagem 1">
-            <h1 class ="cabeçalho-1">COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO J. DA SERRA</h1>   
-             <ul>
-                <li class="cabeçalho-lista-1">HISTORICO  </li> 
-                <li class="cabeçalho-lista2">EQUIPE PEDAGÓGICA</li>     
+            <h1 class ="cabeçalho-titulo">COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO J. DA SERRA</h1>   
+            <ul> class = "cabeçalho-lista"
+                <li class="cabeçalho-lista-item1">HISTORICO  </li> 
+                <li class="cabeçalho-lista-item2">EQUIPE PEDAGÓGICA</li>     
             </ul>
      </header>
-
 </body>
 <head>
 
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Escola de Robótica</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header class="cabeçalho" >
+        
+        <h1 class="cabeçalho-título">Escola de Robótica</h1>
+        <ul class="cabeçalho-lista">
+            <li class="cabeçalho-lista-item1">Escola</li>
+            <li class="cabeçalho-lista-item2">Equipe de Professores</li>
+        </ul>
+    </header>
+</body>
