--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <header class="cabeçalho" >
         <img src="educacao.png" alt="imagem 1">
             <h1 class ="cabeçalho-titulo">COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO J. DA SERRA</h1>   
-            <ul> class = "cabeçalho-lista"
+            <ul class="cabeçalho-lista"</ul>
                 <li class="cabeçalho-lista-item1">HISTORICO  </li> 
                 <li class="cabeçalho-lista-item2">EQUIPE PEDAGÓGICA</li>     
             </ul>
