--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
      <header class="cabeçalho" >
-        <img src="educacao.png" alt="imagem 1">
+        <img src="material-escolar 1 (1).png" alt="imagem 1">
             <h1 class ="cabeçalho-titulo">COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO J. DA SERRA</h1>   
-            <ul class="cabeçalho-lista"</ul>
+            <ul class="cabeçalho-lista"
                 <li class="cabeçalho-lista-item1">HISTORICO  </li> 
                 <li class="cabeçalho-lista-item2">EQUIPE PEDAGÓGICA</li>     
             </ul>
