--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
      <header class="cabeçalho" >
         <img src="material-escolar 1 (1).png" alt="imagem 1">
-            <h1 class ="cabeçalho-titulo">COLÉGIO CÍVICO MILITAR JOAO XXIII - SÃO J. DA SERRA</h1>   
+            <h1 class ="cabeçalho-titulo">COLÉGIO CÍVICO MILITAR JOÃO XXIII - SÃO J. DA SERRA</h1>   
             <ul class="cabeçalho-lista"
                 <li class="cabeçalho-lista-item1">HISTORICO  </li> 
                 <li class="cabeçalho-lista-item2">EQUIPE PEDAGÓGICA</li>     
