--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="material-escolar 1 (1).png" alt="imagem 1">
             <h1 class ="cabeçalho-titulo">COLÉGIO CÍVICO MILITAR JOÃO XXIII - SÃO J. DA SERRA</h1>   
             <ul class="cabeçalho-lista">
-                <li="cabeçalho-lista-item1">HISTORICO</li> 
+                <li class="cabeçalho-lista-item1">HISTORICO</li> 
                 <li class="cabeçalho-lista-item2">EQUIPE PEDAGÓGICA</li>     
             </ul>
      </header>
