--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="material-escolar 1 (1).png" alt="imagem 1">
         <h1></h1>
         <h1></h1>
-            <h1 class ="cabeçalho-titulo">COLÉGIO CÍVICO MILITAR JOÃO XXIII - SÃO J. DA SERRA</h1>   
+            <h1 class ="cabeçalho-titulo">COLÉGIO CÍVICO MILITAR JOÃO XXIII - SÃO JERÔNIMO DA SERRA</h1>   
             <ul class="cabeçalho-lista">
                 <li class="cabeçalho-lista-item1">HISTÓRICO</li> 
 
