--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=5.0">
-   <title>COLÉGIO CÍVICO MILITAR JOÃO XXIII - SÃO JERONIMO DA SERRA</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+   <title>Eu </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
