--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-   <title>Eu </title>
-    <link rel="stylesheet" href="style.css">
+   <title>ESCOLA CÍVICO MILITAR JOÃO XXIII-SÃO JERONIMO DA SERRA-PR</title>
+    <linkrel="stylesheet" href="style.css">
 </head>
 <body>
      <header class="cabeçalho" >
         <img src="material-escolar 1 (1).png" alt="imagem 1">
         <h1></h1>
         <h1></h1>
-            <h1 class ="cabeçalho-titulo">COLÉGIO CÍVICO MILITAR JOÃO XXIII - SÃO JERÔNIMO DA SERRA</h1>   
+            <h1 class="cabeçalho-titulo">COLÉGIO CÍVICO MILITAR JOÃO XXIII - SÃO JERÔNIMO DA SERRA</h1>   
             <ul class="cabeçalho-lista">
                 <li class="cabeçalho-lista-item1">HISTÓRICO</li> 
 
