--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>ESCOLA CÍVICO MILITAR JOÃO XXIII-SÃO JERONIMO DA SERRA-PR</title>
+   <title>COLÉGIO CIVICO MILITAR JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
