--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>COLÉGIO CIVICO MILITAR JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO</title>
+   <title>C.C.M. JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <img src="material-escolar 1 (1).png" alt="imagem 1">
         <h1></h1>
         <h1></h1>
-            <h1 class="cabeçalho-título">COLÉGIO CÍVICO MÍLITAR JOÃO XXIII - SÃO JERÔNIMO DA SERRA - Pr.</h1>   
+            <h1 class="cabeçalho-título">COLÉGIO CÍVICO MÍLITAR JOÃO XXIII-SÃO JERÔNIMO DA SERRA - PR.</h1>   
             <ul class="cabeçalho-lista">
                 <li class="cabeçalho-lista-item1">HISTÓRICO</li> 
                 <li class="cabeçalho-lista-item2">LOCALIZAÇÃO </li>     
