--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      <header class="cabeçalho" >
-        <img src="material-escolar 1 (1).png" alt="imagem 1">
+        <img class=src"material-escolar 1 (1).png" alt="imagem 1">
         <h1></h1>
         <h1></h1>
             <h1 class="cabeçalho-título">COLÉGIO CÍVICO MÍLITAR JOÃO XXIII-SÃO JERÔNIMO DA SERRA - PR.</h1>   
