--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
      <header class="cabeçalho" >
         <img class=src"material-escolar 1 (1).png" alt="imagem 1">
-        <h1></h1>
-        <h1></h1>
-            <h1 class="cabeçalho-título">COLÉGIO CÍVICO MÍLITAR JOÃO XXIII-SÃO JERÔNIMO DA SERRA - PR.</h1>   
+            <h1 class="cabeçalho-título">COLÉGIO CÍVICO MÍLITAR JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO</h1>   
             <ul class="cabeçalho-lista">
                 <li class="cabeçalho-lista-item1">HISTÓRICO</li> 
                 <li class="cabeçalho-lista-item2">LOCALIZAÇÃO </li>     
