--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      <header class="cabeçalho">
-            <img class="cabeçalho-imagem"src="material-escolar"alt="imagem-1">
+            <img class="cabeçalho-imagem"src="material-escolar 1.png"alt="imagem-1">
             <h1 class="cabeçalho-título">COLÉGIO CÍVICO MÍLITAR JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO</h1>   
             <ul class="cabeçalho-lista">
                 <li class="cabeçalho-lista-item1">HISTÓRICO</li> 
