--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>C.C.M. JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO</title>
@@ -15,5 +16,10 @@
                 <li class="cabeçalho-lista-item2">LOCALIZAÇÃO </li>     
             </ul>
      </header>
+     <section class="apresentação">
+        <h2 class="Apresentação título"> Quem somos, nós? </h2>
+        <p>  A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
+        <p>  A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
+    </section>
 </body>
 <head>
