--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
      <header class="cabeçalho">
             <img class="cabeçalho-imagem"src="material-escolar 1.png"alt="imagem-1">
-            <h1 class="cabeçalho-título">COLÉGIO CÍVICO MÍLITAR JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO SÃO JERÔNIMO DA SERRA-PR</h1>   
+            <h1 class="cabeçalho-título">C.C. MÍLITAR JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO SÃO JERÔNIMO DA SERRA-PR</h1>   
             <ul class="cabeçalho-lista">
                 <li class="cabeçalho-lista-item1">HISTÓRICO</li> 
                 <li class="cabeçalho-lista-item2">LOCALIZAÇÃO </li>     
