--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             </ul>
      </header>
      <section class="apresentação">
-        <h2 class="apresentaçãotítulo"> Quem somos, nós? </h2>
+        <h2 class="apresentaçãotítulo"> <title> Quem somos nós</title>Quem somos, nós? </h2>
         <p class=" apresentaçãoparagrafo1"> A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
         <p class=" apresentaçãoparagrafo2">  A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
         <img class="apresentaçãoimagem"src="livros.png"alt="imagem-2">
+        
     </section>
 </body>
 <head>
