--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul>
      </header>
      <section class="apresentação">
-        <h2 class="apresentação-título"> <title> Quem somos nós</title>Quem somos, nós? </h2>
+        <h2 class="apresentação-título">Quem somos, nós? </h2>
         <p class="apresentação-paragrafo1"> A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
         <p class="apresentação-paragrafo2">  A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
         <img class="apresentação-imagem"src="livros.png"alt="imagem-2">
