--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      </header>
      <section class="apresentacao">
         <div class="apresentacao-conteudo"> 
-        <h2 class="apresentacão-titulo">Quem somos, nós? </h2>
+        <h2 class="apresentacao-titulo">Quem somos, nós? </h2>
         <p class="apresentacão-paragrafo1"> A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
         <p class="apresentacão-paragrafo2">  A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
 -
