--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
        
     </div>
 
-       <img class="apresentacao-imagem"src=""alt="imagem-2">
->>>>>>> 64d87ac0bb604de1604f724d5da89dbe9c32ea1f
+       <img class="apresentacao-imagem"src="livros.png"alt="imagem-2">
     </section>
 </body>
 <head>
