--- a/index.html
+++ b/index.html
@@ -16,16 +16,13 @@
                 <li class="cabeçalho-lista-item2">LOCALIZAÇÃO </li>     
             </ul>
      </header>
-     <section class="apresentacao">
-        
-        <div class="apresentacao-conteudo"> 
-        <h2 class="apresentacao-titulo">Quem somos, nós? </h2>
-        <p class="apresentacão-paragrafo1"> A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
-        <p class="apresentacão-paragrafo2">  A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
-       
+     <section class="apresentacao">    
+        <div class="apresentacao-div-conteudo"> 
+            <h2 class="apresentacao-titulo">Quem somos, nós? </h2>
+            <p class="apresentacão-paragrafo1"> A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
+            <p class="apresentacão-paragrafo2">  A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
     </div>
 
-       <img class="apresentacao-imagem"src="livros.png"alt="imagem-2">
+    <img class="apresentacao-imagem"src="livros.png"alt="imagem-2">
     </section>
 </body>
-<head>
