--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
     </div>
 
     <img class="apresentacao-imagem"src="livros.png"alt="imagem-2">
+
+        <h3 class="Professores">Estes são nossos professpores!</h3>
     </section>
+    <section class="professores">
+
+
+
+</section>
 </body>
 
 
