--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
     <img class="apresentacao-imagem"src="livros.png"alt="imagem-2">
 
-        <h3 class="Professores">Estes são nossos professpores!</h3>
+        
     </section>
+
     <section class="professores">
+      <h3 class="professores-títulos">Estes são nossos professpores!</h3>
 
-
-
-</section>
+    </section>
 </body>
 
 
