--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
             <h2 class="apresentacao-titulo">Quem somos, nós? </h2>
             <p class="apresentacão-paragrafo1"> A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
             <p class="apresentacão-paragrafo2">  A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
-    </div>
-
+       </div>
     <img class="apresentacao-imagem"src="livros.png"alt="imagem-2">
-    
-    </section>
 
-    <section class="professores">
-      <h3 class="professores-títulos">Estes são nossos professpores!</h3>
+    </section>
+        <section class="professores">
+        <h3 class="professores-titulo">Estes são nossos professpores!</h3>
 
     </section>
 </body>
