--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li class="cabeçalho-lista-item">LOCALIZAÇÃO </li>     
             </ul>
      </header>
+
      <section class="apresentacao">    
         <div class="apresentacao-div-conteudo"> 
             <h2 class="apresentacao-titulo">Quem somos, nós? </h2>
@@ -24,8 +25,10 @@
        </div>
     <img class="apresentacao-imagem"src="livros.png"alt="imagem-2">
     </section>
+
     <section class="professores">
-        <h3 class="professores-titulo">Estes são nossos professpores!</h3>
+        <h3 class="professores-titulo">Estes são nossos professores!</h3>
+        <img src="imagem edson.jpge" alt="foto edson">
     </section>
 </body>
 
