--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <h3 class="professores-titulo">Estes são nossos professores!</h3>
         <img src="imagem edson.jpge" alt="foto edson">
     </section>
+    <header>
 </body>
+
 
 
 <html>
