--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section class="professores">
         <h3 class="professores-titulo">Estes são nossos professores!</h3>
-       
+       <img src="professores.jpg" alt="imagem-3">
     </section>
     <header>
 </body>
