--- a/index.html
+++ b/index.html
@@ -28,14 +28,9 @@
        </div>
     <img class="apresentacao-imagem"src="livros.png"alt="imagem-2">
     </section>
-
     <section class="professores">
         <h3 class="professores-titulo">Estes são nossos professores!</h3>
-       <img src="professores.jpg" alt="imagem-3">
+       <img src="foto edson.jpg" alt="imagem-3">
     </section>
-    <header>
+    
 </body>
-
-
-
-<html>
