--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>+
 <html lang="pt-br">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>C.C.M. JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO</title>
@@ -21,16 +20,23 @@
      </header>
 
      <section class="apresentacao">    
-        <div class="apresentacao-div-conteudo"> 
-            <h2 class="apresentacao-titulo">Quem somos, nós? </h2>
-            <p class="apresentacão-paragrafo1"> A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
-            <p class="apresentacão-paragrafo2">  A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
-       </div>
+            <div class="apresentacao-div-conteudo"> 
+                <h2 class="apresentacao-titulo">Quem somos, nós? </h2>
+                <p class="apresentacão-paragrafo1"> A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
+                <p class="apresentacão-paragrafo2">  A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
+            </div>
     <img class="apresentacao-imagem"src="livros.png"alt="imagem-2">
     </section>
+
     <section class="professores">
         <h3 class="professores-titulo">Estes são nossos professores!</h3>
-       <img src="foto edson.jpg" alt="imagem-3">
+            <div class="professores-div">
+                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
+                <h4 class="professor-nome"> Aline Carpiné</h4>
+                <img class="professores-icones" src="github.png" alt="icone github">
+                <img class="professores-icones"src="linkedin.png" alt="icone linkedin">
+                <img class="professores-icones"src="instagram.png" alt="icone instagram">
+            </div>
+      
     </section>
-    
 </body>
