--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3 class="professores-titulo">Estes são nossos professores!</h3>
             <div class="professores-div">
                 <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
-                <h4 class="professor-nome"> Aline Carpiné</h4>
+                <h4 class="professor-nome"> /Edson M. Lopes</h4>
                 <img class="professores-icones" src="github.png" alt="icone github">
                 <img class="professores-icones"src="facebook.png" alt="icone linkedin">
                 <img class="professores-icones"src="instagran.png" alt="icone instagram">
