--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>+
 <html lang="pt-br">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>C.C.M. JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO</title>
@@ -19,8 +20,7 @@
             </ul>
      </header>
 
-     <section class="apresentacao">  
-          
+     <section class="apresentacao">    
             <div class="apresentacao-div-conteudo"> 
                 <h2 class="apresentacao-titulo">Quem somos, nós? </h2>
                 <p class="apresentacão-paragrafo1"> A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
@@ -33,10 +33,10 @@
         <h3 class="professores-titulo">Estes são nossos professores!</h3>
             <div class="professores-div">
                 <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
-                <h4 class="professor-nome"> /Edson M. Lopes</h4>
+                <h4 class="professor-nome"> Aline Carpiné</h4>
                 <img class="professores-icones" src="github.png" alt="icone github">
-                <img class="professores-icones"src="facebook.png" alt="icone linkedin">
-                <img class="professores-icones"src="instagran.png" alt="icone instagram">
+                <img class="professores-icones"src="linkedin.png" alt="icone linkedin">
+                <img class="professores-icones"src="instagram.png" alt="icone instagram">
             </div>
       
     </section>
