--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <section class="professores">
         <h3 class="professores-titulo">Estes são nossos professores!</h3>
+        <div class="professores-todos"> 
             <div class="professores-div">
                 <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
@@ -38,6 +39,6 @@
                 <img class="professores-icones"src="linkedin.png" alt="icone linkedin">
                 <img class="professores-icones"src="instagram.png" alt="icone instagram">
             </div>
-      
+        </div>
     </section>
 </body>
