--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <div class="professores-todos"> 
             <div class="professores-div">
                 <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
+                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
+                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
+                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
+                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
+                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
+                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
+                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
                 <img class="professores-icones" src="github.png" alt="icone github">
                 <img class="professores-icones"src="linkedin.png" alt="icone linkedin">
