--- a/index.html
+++ b/index.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>+
 <html lang="pt-br">
+
 <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>C.C.M. JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO</title>
+    <title>C.C.M. JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
-<body>
-     <header class="cabeçalho">
-            <img class="cabeçalho-imagem"src="material-escolar 1.png"alt="imagem-1">
-            <h1 class="cabeçalho-título">C.C. MÍLITAR JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO SÃO JERÔNIMO DA SERRA-PR</h1>   
-            <ul class="cabeçalho-lista">
-                <li class="cabeçalho-lista-item">HISTÓRICO</li> 
-                <li class="cabeçalho-lista-item">LOCALIZAÇÃO </li>     
-            </ul>
-     </header>
 
-     <section class="apresentacao">    
-            <div class="apresentacao-div-conteudo"> 
-                <h2 class="apresentacao-titulo">Quem somos, nós? </h2>
-                <p class="apresentacão-paragrafo1"> A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
-                <p class="apresentacão-paragrafo2">  A escola é o lugar onde se pode aprender, ensinar e trocar informações e experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio, refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores, coordenação e diretoria.</p>
-            </div>
-    <img class="apresentacao-imagem"src="livros.png"alt="imagem-2">
+<body>
+    <header class="cabeçalho">
+        <img class="cabeçalho-imagem" src="material-escolar 1.png" alt="imagem-1">
+        <h1 class="cabeçalho-título">C.C. MÍLITAR JOÃO XXIII - ENSINO FUNDAMENTAL E MÉDIO SÃO JERÔNIMO DA SERRA-PR</h1>
+        <ul class="cabeçalho-lista">
+            <li class="cabeçalho-lista-item">HISTÓRICO</li>
+            <li class="cabeçalho-lista-item">LOCALIZAÇÃO </li>
+        </ul>
+    </header>
+
+    <section class="apresentacao">
+        <div class="apresentacao-div-conteudo">
+            <h2 class="apresentacao-titulo">Quem somos, nós? </h2>
+            <p class="apresentacão-paragrafo1"> A escola é o lugar onde se pode aprender, ensinar e trocar informações e
+                experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio,
+                refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores,
+                coordenação e diretoria.</p>
+            <p class="apresentacão-paragrafo2"> A escola é o lugar onde se pode aprender, ensinar e trocar informações e
+                experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio,
+                refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores,
+                coordenação e diretoria.</p>
+        </div>
+        <img class="apresentacao-imagem" src="livros.png" alt="imagem-2">
     </section>
 
     <section class="professores">
         <h3 class="professores-titulo">Estes são nossos professores!</h3>
-        <div class="professores-todos"> 
+        <div class="professores-todos">
             <div class="professores-div">
-                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
-                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
-                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
-                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
-                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
-                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
-                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
-                <img class="professores-imagem"src="foto edson.jpg" alt="imagem-3">
+                <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
                 <img class="professores-icones" src="github.png" alt="icone github">
-                <img class="professores-icones"src="linkedin.png" alt="icone linkedin">
-                <img class="professores-icones"src="instagram.png" alt="icone instagram">
+                <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
+                <img class="professores-icones" src="instagram.png" alt="icone instagram">
             </div>
         </div>
     </section>
