--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section class="apresentacao">
         <div class="apresentacao-div-conteudo">
-            <h2 class="apresentacao-titulo">Nossos Colaboradores! </h2>
+            <h2 class="apresentacao-titulo">Quem somos nós? </h2>
             <p class="apresentacão-paragrafo1"> A escola é o lugar onde se pode aprender, ensinar e trocar informações e
                 experiências de vida. O ambiente escolar é composto por salas de aula, parque recreativo, pátio,
                 refeitório ou lanchonete, quadras esportivas, biblioteca, auditório, secretaria, sala dos professores,
