--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
                 <img class="professores-icones" src="github.png" alt="icone github">
                 <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
                 <img class="professores-icones" src="instagram.png" alt="icone instagram">
+           
+                <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
+                <h4 class="professor-nome"> Aline Carpiné</h4>
+                <img class="professores-icones" src="github.png" alt="icone github">
+                <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
+                <img class="professores-icones" src="instagram.png" alt="icone instagram">
+                
+                <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
+                <h4 class="professor-nome"> Aline Carpiné</h4>
+                <img class="professores-icones" src="github.png" alt="icone github">
+                <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
+                <img class="professores-icones" src="instagram.png" alt="icone instagram">
             </div>
         </div>
     </section>
