--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
                 <div class="professores-div">
                     <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
                     <h4 class="professor-nome"> Aline Carpiné</h4>
+                   <a href="">
                     <img class="professores-icones" src="github.png" alt="icone github">
-                    <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
+                    "https://github.dev/EdsonML/Projeto_0/settings"></a>
+            
+                    <img class="professores-icones" src="linkedin.png" alt="icone linkedin"></a>
+                    <img class="professores <a href="https://br.linkedin.com/"></a>
                     <img class="professores-icones" src="instagram.png" alt="icone instagram">
                 </div>
                 <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
@@ -56,7 +60,24 @@
                 <img class="professores-icones" src="github.png" alt="icone github">
                 <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
                 <img class="professores-icones" src="instagram.png" alt="icone instagram">
-            </div>
+            </div class todos>
+        </div>
+        <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
+        <h4 class="professor-nome"> Aline Carpiné</h4>
+        <img class="professores-icones" src="github.png" alt="icone github">
+        <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
+        <img class="professores-icones" src="instagram.png" alt="icone instagram">
+        </div>
+
+        </div>
+        <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
+        <h4 class="professor-nome"> Aline Carpiné</h4>
+        <img class="professores-icones" src="github.png" alt="icone github">
+        <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
+        <img class="professores-icones" src="instagram.png" alt="icone instagram">
+        </div>
+        <span>
+        </span>
         </div>
         <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
         <h4 class="professor-nome"> Aline Carpiné</h4>
@@ -80,23 +101,8 @@
         <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
         <img class="professores-icones" src="instagram.png" alt="icone instagram">
         </div>
-
-        </div>
-        <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
-        <h4 class="professor-nome"> Aline Carpiné</h4>
-        <img class="professores-icones" src="github.png" alt="icone github">
-        <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
-        <img class="professores-icones" src="instagram.png" alt="icone instagram">
-        </div>
-
-        </div>
-        <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
-        <h4 class="professor-nome"> Aline Carpiné</h4>
-        <img class="professores-icones" src="github.png" alt="icone github">
-        <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
-        <img class="professores-icones" src="instagram.png" alt="icone instagram">
-        </div>
-
+        <span>
+        </span>
         </div>
         <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
         <h4 class="professor-nome"> Aline Carpiné</h4>
