--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
                     <img class="professores-icones" src="instagram.png" alt="icone instagram">
                 </div>
-           </div class todos>
+           </div>
 
         </div>
         </div>
