--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="professores-div">
                 <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
-                <img class="professores-icones" src="github.png" alt="icone github">
+                <a href="https://github.dev/EdsonML"><link rel="stylesheet" href="https://github.dev/EdsonML"><img class="professores-icones" src="github.png" alt="icone github"></a>
                 <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
                 <img class="professores-icones" src="instagram.png" alt="icone instagram">
             </div>
@@ -75,14 +75,6 @@
                 <img class="professores-icones" src="instagram.png" alt="icone instagram">
             </div>
                     <span></span>
-            <div class="professores-div">
-                <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
-                <h4 class="professor-nome"> Aline Carpiné</h4>
-                <img class="professores-icones" src="github.png" alt="icone github">
-                <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
-                <img class="professores-icones" src="instagram.png" alt="icone instagram">
-            </div>
-
             <div class="professores-div">
                 <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
