--- a/index.html
+++ b/index.html
@@ -47,32 +47,32 @@
                 <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
                 <a href="https://github.dev/EdsonML"><link rel="stylesheet" href="https://github.dev/EdsonML"><img class="professores-icones" src="github.png" alt="icone github"></a>
-                <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
-                <img class="professores-icones" src="instagram.png" alt="icone instagram">
+                <a href="https://www.linkedin.com/feed/"></a><img class="professores-icones" src="linkedin.png" alt="icone linkedin"</a>
+                <a href="https://www.instagram.com/accounts/login/"></a><img class="professores-icones" src="instagram.png" alt="icone instagram"/a>
             </div>
 
             <div class="professores-div">
                 <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
-                <img class="professores-icones" src="github.png" alt="icone github">
-                <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
-                <img class="professores-icones" src="instagram.png" alt="icone instagram">
+                <a href="https://github.dev/EdsonML"><link rel="stylesheet" href="https://github.dev/EdsonML"><img class="professores-icones" src="github.png" alt="icone github"></a>
+                <a href="https://www.linkedin.com/feed/"></a><img class="professores-icones" src="linkedin.png" alt="icone linkedin"</a>
+                <a href="https://www.instagram.com/accounts/login/"></a><img class="professores-icones" src="instagram.png" alt="icone instagram"/a>
             </div>
 
             <div class="professores-div">
                 <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
-                <img class="professores-icones" src="github.png" alt="icone github">
-                <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
-                <img class="professores-icones" src="instagram.png" alt="icone instagram">
+                <a href="https://github.dev/EdsonML"><link rel="stylesheet" href="https://github.dev/EdsonML"><img class="professores-icones" src="github.png" alt="icone github"></a>
+                <a href="https://www.linkedin.com/feed/"></a><img class="professores-icones" src="linkedin.png" alt="icone linkedin"</a>
+                <a href="https://www.instagram.com/accounts/login/"></a><img class="professores-icones" src="instagram.png" alt="icone instagram"/a>
             </div>
 
             <div class="professores-div">
                 <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
-                <img class="professores-icones" src="github.png" alt="icone github">
-                <img class="professores-icones" src="linkedin.png" alt="icone linkedin">
-                <img class="professores-icones" src="instagram.png" alt="icone instagram">
+                <a href="https://github.dev/EdsonML"><link rel="stylesheet" href="https://github.dev/EdsonML"><img class="professores-icones" src="github.png" alt="icone github"></a>
+                <a href="https://www.linkedin.com/feed/"></a><img class="professores-icones" src="linkedin.png" alt="icone linkedin"</a>
+                <a href="https://www.instagram.com/accounts/login/"></a><img class="professores-icones" src="instagram.png" alt="icone instagram"/a>
             </div>
                     <span></span>
             <div class="professores-div">
