--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
                 <a href="https://github.dev/EdsonML"><img class="professores-icones" src="github.png" alt="icone github"></a>
-                <a ref="https://www.linkedin.com/feed/"><link rel="stylesheet" href=""></a><img class="professores-icones" src="linkedin.png" alt="icone linkedin"></a>
+                <a ref="https://www.linkedin.com/feed/"><img class="professores-icones" src="linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com/accounts/login/"></a><img class="professores-icones" src="instagram.png" alt="icone instagram"></a>
             </div>
 
