--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 
     <section class="professores">
         <h3 class="professores-titulo">Estes são nossos professores!</h3>
+
         <div class="professores-todos">
-            <span></span>
+
             <div class="professores-div">
                 <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
@@ -69,6 +70,8 @@
 
             </div>
 
+            <span></span>
+
             <div class="professores-div">
                 <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
@@ -76,7 +79,7 @@
                 <a href="https://www.linkedin.com/feed/"><img class="professores-icones" src="linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com/accounts/login/"><img class="professores-icones" src="instagram.png" alt="icone instagram"></a>
           </div>
-                    <span></span>
+                  
             <div class="professores-div">
                 <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
@@ -116,6 +119,7 @@
         </div>
     </section>
 <footer class="rodape">
+    <img src="" alt="foto escola">
 
 </footer>
 </body>
