--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
                 <a href="https://github.dev/EdsonML"><img class="professores-icones" src="github.png" alt="icone github"></a>
                 <a href="https://www.linkedin.com/feed/"><img class="professores-icones" src="linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com/accounts/login/"><img class="professores-icones" src="instagram.png" alt="icone instagram"></a>
-
             </div>
 
             <div class="professores-div">
@@ -111,7 +110,22 @@
                 <a href="https://github.dev/EdsonML"><img class="professores-icones" src="github.png" alt="icone github"></a>
                 <a href="https://www.linkedin.com/feed/"><img class="professores-icones" src="linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com/accounts/login/"><img class="professores-icones" src="instagram.png" alt="icone instagram"></a>
+            </div>
 
+            <div class="professores-div">
+                <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
+                <h4 class="professor-nome"> Aline Carpiné</h4>
+                <a href="https://github.dev/EdsonML"><img class="professores-icones" src="github.png" alt="icone github"></a>
+                <a href="https://www.linkedin.com/feed/"><img class="professores-icones" src="linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/accounts/login/"><img class="professores-icones" src="instagram.png" alt="icone instagram"></a>
+            </div>
+
+            <div class="professores-div">
+                <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
+                <h4 class="professor-nome"> Aline Carpiné</h4>
+                <a href="https://github.dev/EdsonML"><img class="professores-icones" src="github.png" alt="icone github"></a>
+                <a href="https://www.linkedin.com/feed/"><img class="professores-icones" src="linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/accounts/login/"><img class="professores-icones" src="instagram.png" alt="icone instagram"></a>
             </div>
         </div>
         </div>
