--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="professores-todos">
 
             <div class="professores-div">
-                <img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
+                <a href="https://www.flaticon.com/br/icones-animados-gratis/professor" title="professor ícones animados">Professor ícones animados criados por Freepik - Flaticon<img class="professores-imagem" src="foto edson.jpg" alt="imagem-3">
                 <h4 class="professor-nome"> Aline Carpiné</h4>
                 <a href="https://github.dev/EdsonML"><img class="professores-icones" src="github.png" alt="icone github"></a>
                 <a href="https://www.linkedin.com/feed/"><img class="professores-icones" src="linkedin.png" alt="icone linkedin"></a>
